# paradex-rs

./: .lycheeignore  Cargo.toml  KNOWN_ISSUES.md  MIGRATION_GUIDE.md  README.md
.github/workflows/: ci.yml  clippy.yml  link-check.yml
examples/: basic_api_usage.rs  complete_workflow.rs  fetch_account_data.rs  order_management.rs  websocket_realtime.rs
src/: constants.rs  environment.rs  error.rs  lib.rs  subkey.rs
src/account/: account.rs  block_trades_signing.rs  key_derivation.rs  l2_transfer.rs  mod.rs  signing.rs
src/api/: auth.rs  block_trades.rs  client.rs  http_client.rs  mod.rs  ws_client.rs  ws_client_impl.rs
src/message/: auth.rs  block_trades.rs  mod.rs  onboarding.rs  order.rs  typed_data.rs
src/types/: block_trades.rs  mod.rs  models.rs  order.rs
src/utils/: mod.rs
